update accumulator intro text

--- a/accumulator/accumulator.ipynb
+++ b/accumulator/accumulator.ipynb
@@ -2,58 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# Accumulator\n",
     "\n",
-    "In this notebook, we study the statistics of the accumulator. Specifically, we are interested in the signal-to-noise ratio of of a synapse receiving spikes from an accumulator.\n",
+    "In this notebook, we study the statistics of a synapse receiving input from the accumulator.\n",
     "\n",
     "In previous notebooks, we studied the statistics of a synapse with input spikes derived from various processes including Poisson, periodic, p-thinned period, and gamma processes. Those analysis assumed\n",
-    "1. the input spike train interspike interval (ISI) distribution\n",
-    "2. the ISIs were independent and identically distributed (IID)\n",
+    "1. the input spike train interspike intervals (ISI)s were independent and identically distributed (IID)\n",
+    "2. the input spike train ISIs followed a given distribution\n",
     "\n",
-    "Here, we don't have the luxury of assuming a particular process to generate spikes for the synapse. Therefore we must first examine the spiking statistics of the accumulator before the statistics of a synapse receiving spikes from the accumulator. The gamma-process spikes, which can be constructed from a Poisson process by only considering every kth spike, is the closest approximation we have to the accumulator spikes. However, the actual accumulator operates under very different conditions:\n",
-    "* Neurons spiking is closer to regular than to Poisson (in NEF networks)\n",
-    "* The accumulator sums spikes from many neurons with each neuron having its own weight\n",
+    "Here, we do not assume a particular ISI distribution for the synapse input or that the ISI are IID. Instead, we first study the statistics of the accumulator. It would be very nice if the accumulator output ISIs turned out to be IID, and in fact, we will show that under certain conditions the accumulator output indeed is IID with a gamma distribution. However, under many other conditions, the accumulator output turns out to not be IID or have a nice distribution. \n",
     "\n",
-    "The accumulator is parameterized by a threshold $k$. Below threshold, the accumulator behaves exactly like an integrator. Specifically,\n",
+    "The following factors relate to the assumption that the accumulator output spikes are IID~gamma:\n",
+    "* Neurons spiking is closer to regular (periodic) than to Poisson in small NEF networks, so the accumulator output ISIs may not be gamma-distributed.\n",
+    "* Neuron spiking can become very correlated in many-layered, feed-foward NEF networks, so the accumulator output may not be gamma-distributed or independent.\n",
+    "* The accumulator can carry-over state from one spike to the next so the ISI are not strictly independent. \n",
+    "* The accumulator receives input from many neurons: This might work in our favor becuase the superposition of many non-Poisson processes can have an effect that is equivalent to a Poisson process. In addition, if the spike weights are small relative to the threshold, the carry-over from one ISI to the next might be trivial. As usual, the devil is in the details.\n",
     "\n",
-    "$$\n",
-    "\\dot{x} = u\n",
-    "$$\n",
-    "\n",
-    "where $x$ is the accumulator state and $u$ is the accumulator input. When the accumulator reaches $k$ ($-k$), it outputs a positive (negative) spike.\n",
-    "\n",
-    "The accumulator input can be expressed as\n",
-    "\n",
-    "$$u=\\sum_{i=1}^N\\sum_{j=1}^{K(i)} d_i\\delta(t-t_{i,j})$$\n",
-    "\n",
-    "where\n",
-    "* $N$ is the number of input neurons\n",
-    "* $K(i)$ is the number spikes emmited by the $i$th neuron\n",
-    "* d_i is the decode weight of the $i$th neuron\n",
-    "* $t_{i,j}$ is the time of the $i$th neuron's $j$th spike\n",
-    "\n",
-    "With the above, we can then write the within threshold accumulator state as\n",
-    "\n",
-    "$$\n",
-    "x = \\sum_i\\sum_j d_iH(t-t_{i,j})\n",
-    "$$\n",
-    "\n",
-    "where $H(\\cdot)$ is the Heaviside step function.\n",
-    "\n",
-    "What will the distribution of threshold crossings be?\n",
-    "\n",
-    "We need to show two things:\n",
-    "* The accumulator inputs under realistic conditions are effectively Poisson\n",
-    " * Then the outpus ISI will be approximately ~gamma with shape parameter $\\frac{\\sum_i a_id_i}{T}$ \n",
-    "* The accumulator outputs under realistic conditions are IID\n",
-    " * Then we can rely on the gamma process notebook\n"
+    "In the rest of this notebook, we work towards whether the accumulator output can be assumed as IID under realistic conditions.\n",
+    "***Perhaps*** we will conclude that the accumulator inputs under realistic conditions are effectively Poisson, so that the output ISI are approximately IID-gamma with shape parameter $\\frac{\\sum_i a_id_i}{T}$ where $a_i$ is the spike rate of the $i$th neuron, $d_i$ is its decode weight, and $T$ is the threshold."
    ]
   },
   {
@@ -65,7 +33,46 @@
     }
    },
    "source": [
-    "# Accumulator structure and operation\n",
+    "## Mathematical Description\n",
+    "\n",
+    "The accumulator is parameterized by a threshold $T$. Below threshold, the accumulator is exactly an integrator. Specifically,\n",
+    "\n",
+    "$$\n",
+    "\\dot{x} = u\n",
+    "$$\n",
+    "\n",
+    "where $x$ is the accumulator state and $u$ is the accumulator input. The accumulator input expressed by\n",
+    "\n",
+    "$$u=\\sum_{i=1}^N\\sum_{j=1}^{K(i)} d_i\\delta(t-t_{i,j})$$\n",
+    "\n",
+    "where\n",
+    "* $N$ is the number of input neurons\n",
+    "* $K(i)$ is the number spikes emmited by the $i$th neuron\n",
+    "* $d_i$ is the decode weight of the $i$th neuron\n",
+    "* $t_{i,j}$ is the time of the $i$\n",
+    "\n",
+    "The accumulator state is initially 0, and the threshold is 2-sided so that when the accumulator reaches $T$ ($-T$), it outputs a positive (negative) spike and resets its state towards 0 by $T$. We'll assume that the accumulator can only emit one spike at time because, as we'll see, the hardware does not support multiple, simultaneous output spikes. In other words, we constrain the input spike weights so that a single spike cannot drive the accumulator so far past its threshold that the carry over from one ISI to the next also trips the threshold.\n",
+    "th neuron's $j$th spike\n",
+    "\n",
+    "We can write the within-threshold accumulator state as\n",
+    "\n",
+    "$$\n",
+    "x = \\sum_i\\sum_j d_iH(t-t_{i,j})\n",
+    "$$\n",
+    "\n",
+    "where $H(\\cdot)$ is the Heaviside step function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    "## Structure and Operation\n",
     "\n",
     "The accumulator is 15 bits wide and uses the <a href=\"https://en.wikipedia.org/wiki/Ones%27_complement\">one's complement</a> number representation. Each entry in the weight memory is 8 bits wide and also uses the one's complement number representation. In one's complement, the highest order bit indicates the sign while the lower order bits indicate the value. To convert between positive and negative numbers, flip all of the bits in the number. A 3-bit example is given as follows:\n",
     "\n",
@@ -361,6 +368,7 @@
      "end_time": "2017-05-19T21:18:08.964365Z",
      "start_time": "2017-05-19T21:18:08.057045Z"
     },
+    "collapsed": true,
     "hide_input": false,
     "run_control": {
      "frozen": false,
@@ -642,7 +650,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "As expected, the accumulator output ISIs follow a gamma distribution, which we've already analyzed in another notebook. That's really cool!\n",
     "\n",
@@ -722,7 +735,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "But there is more to the story. Note how the autocorrelation of the output ISI now has structure, which indicates that the output ISIs are no longer IID. This makes sense as the accumulator carries over value from one spike to the next because the threshold is not a multiple of the weight."
    ]
@@ -746,6 +764,10 @@
     "ExecuteTime": {
      "end_time": "2017-05-19T21:18:17.124424Z",
      "start_time": "2017-05-19T21:18:13.887476Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     },
     "scrolled": false
    },
@@ -864,7 +886,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "However, we also notice that the output ISI autocorrelations for increasing non-weight-multiple thresholds seem to converge to the case where the threshold is a multiple of the weight. This makes sense because as the threshold grows, each carry-over from the previous accumulation provides a smaller contribution to the next spike time.\n",
     "\n",
