update threshold setting and single, regular spiking neuron analysis

--- a/accumulator/accumulator.ipynb
+++ b/accumulator/accumulator.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "# Setting a Threshold and Computing Decode Weights\n",
     "\n",
-    "The chip does not communicate in terms of real numbers but rather spikes, so we map a $x$ to a spike rate $f$. Users typically build their networks so that $x$ operates within the range $[-1:1]$. Spikes are signed, so we can represent \"negative\" rates. A simple linear mapping converts $x$ to $f$\n",
+    "The chip does not communicate between neurons with fixed or floating point numbers but rather spikes, so we map a $x$ to a spike rate $f$ for communication between neurons. Users typically build their networks so that $x$ operates within the range $[-1:1]$. Spikes are signed, so we can represent \"negative\" rates. We could pick from a number of mappings, but we'll examine a simple linear mapping to convert $x$ to $f$\n",
     "\n",
     "$$\n",
     "f=f_{max}x\n",
@@ -336,14 +336,14 @@
     "\\frac{\\textrm{spikes out}}{\\textrm{time}}=\\frac{\\textrm{spikes_in}}{\\textrm{s}}\\cdot\\frac{\\textrm{weight}}{\\textrm{spike_in}}\\cdot\\frac{1}{\\textrm{threshold}}\n",
     "$$\n",
     "\n",
-    "for $N$ neurons spiking at rates $a_n$ with weights $d_n$ and accumulator with threshold $k$, we can rewrite the previous discussion in the following equation\n",
+    "for $N$ neurons spiking at rates $a_n$ with weights $d_n$ and accumulator with threshold $T$, we can rewrite the previous discussion in the following equation\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{\\sum_{n=1}^Na_nd_n}{k} &= f_{out} \\\\\n",
-    "\\sum_{n=1}^Na_nd_n &= f_{out}k\n",
+    "\\frac{\\sum_{n=1}^Na_nd_n}{T} &= f_{out} \\\\\n",
+    "\\sum_{n=1}^Na_nd_n &= f_{out}T\n",
     "\\end{align*}\n",
     "\n",
-    "That is, we should scale our decode weights by the accumulator threshold to generate the desired output firing rate."
+    "That is, the threshold simply divides the accumulated value, so we should scale our decode weights by the accumulator threshold to generate the desired output firing rate."
    ]
   },
   {
@@ -357,7 +357,7 @@
    "source": [
     "# Simulations\n",
     "\n",
-    "First we run simulations without the weight and threshold constraints on the accumulator (i.e. we can use any integer weight and threshold). We show that it is possible to get a few different output spiking distributions. Next we impose the weight and threshold constraints and use actual NEF networks built by nengo to constrain our simulations."
+    "First we run simulations with a a single neuron. We show that it is possible to get a few different output spiking distributions. Next we move to multiple neurons and actual NEF networks built by nengo to setup our simulations."
    ]
   },
   {
@@ -410,7 +410,9 @@
    "source": [
     "## Single Regular Spiking Neuron\n",
     "\n",
-    "Let's test the accumulator with a single, regular spiking neuron.\n",
+    "Let's test the accumulator with a single, regular spiking neuron. We can expect two sets of behavior:\n",
+    "1. The accumulator simply decimates the input spike train when the threshold is a multiple of the weight.\n",
+    "2. The accumulator introduces variation in the output spike train when the threshold is not a multiple of the weight\n",
     "\n",
     "### Threshold = Multiple of Weight\n",
     "First we consider when the threshold is a multiple of the neuron's weight."
@@ -474,9 +476,9 @@
     }
    },
    "source": [
-    "The top plot shows the neuron's spikes that are fed as input to the accumulator. The middle plot shows the accumulator state in response to the neuron's spikes. Each input spike produces a jump of 1 unit in the accumulator state because the weight is 1. When the accumulator reaches its threshold of 10, shown as a dotted red line, it emits an output spike. The bottom two plots show the accumulator output spikes and their interspike intervals.\n",
+    "From top to bottom, the first plot shows the neuron's spikes that are fed as input to the accumulator. The second plot shows the accumulator state in response to the neuron's spikes. Each input spike produces a jump of 1 unit in the accumulator state because the weight is 1. When the accumulator reaches its threshold of 4, shown as a dotted red line, it emits an output spike as shown in the third plot. The bottom two plots show the accumulator output ISIs and their autocovariance.\n",
     "\n",
-    "Unsurprisingly, all of the output inter-spike intervals are the same. The accumulator simply decimates the traffic by the  weight/threshold ratio. A synapse receiving input from this accumulator would have the same statistics as one receiving input from a regularly spiking neuron operating at the accumulator's output rate."
+    "Unsurprisingly, all of the output inter-spike intervals are the same. The accumulator simply decimates the traffic by the  weight/threshold ratio as expected. A synapse receiving input from this accumulator would have the same statistics as one receiving input from a regularly spiking neuron operating at the accumulator's output rate."
    ]
   },
   {
@@ -561,7 +563,9 @@
     }
    },
    "source": [
-    "As the bottom ISI plot and ISI histogram shows, the output spikes are no longer periodic. A synapse receiving input from this accumulator would have a lower SNR as one receiving input regularly spiking neuron operating at the accumulator's output rate. This also breaks the assumption we've previously made when analyzing synapse statistics that the input spikes are IID."
+    "As the plots of the output ISI, output ISI autocorrelation, and output ISI histogram show, the output spikes are no longer periodic, and the output ISI are certainly not independent. \n",
+    "\n",
+    "While we skip the analysis, a synapse receiving input from this accumulator would actually have a lower SNR as one receiving input from a regularly spiking neuron operating at the accumulator's output rate."
    ]
   },
   {
