fill out clt derivation

--- a/accumulator/accumulator.ipynb
+++ b/accumulator/accumulator.ipynb
@@ -1134,7 +1134,7 @@
    "source": [
     "## Nengo\n",
     "\n",
-    "Use nengo "
+    "Use neuron ensembles from nengo to generate data as input to the accumulator. [TODO]\n"
    ]
   },
   {
@@ -1541,12 +1541,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# Scratchpad\n",
     "\n",
@@ -1567,8 +1562,88 @@
     "\n",
     "If we can treat the input neuron spiking as a renewal process, then this theorem seems to apply.\n",
     "\n",
-    "It might be that we can just approximate the accumulator spike rate as a gamma. The threshold will surely not be a multiple of the weights when in a nengo network, but autocorrelation goes down as "
+    "It might be that we can just approximate the accumulator spike rate as a gamma. The threshold will surely not be a multiple of the weights when in a nengo network, but autocorrelation goes down as the weight / threshold ratio goes down, at least in the Poisson input spiking case. Need to check the regular spiking case too."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLT\n",
+    "\n",
+    "CLT says that the sum of independent rv converges to gaussian. Can we show that sum of poisson, which we know to be gamma converges to gaussian? Maybe the sum of ISI for lots of regular spiking neurons that sum to trip the accumulator also converges to gaussian (i.e. the accumulator output isi is gaussian)\n",
+    "\n",
+    "$$\n",
+    "Z_n = \\frac{X_1+\\cdots+X_n-n\\mu}{\\sqrt{n}\\sigma} = \\sum_{i=1}^n\\frac{X_i-\\mu}{\\sqrt{n}\\sigma}=\\sum_{i=1}^n\\frac{1}{\\sqrt{n}}Y_i\n",
+    "$$\n",
+    "\n",
+    "Now we will use characteristic function of $\\frac{1}{\\sqrt{n}}Y_i$. Note that\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\phi_{aX}(t) &= E\\left[e^{itaX}\\right] \\\\\n",
+    "&= \\phi_X(at) \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "So because $Z_n$ is the sum of iid $Y_i$,\n",
+    "\n",
+    "$$\n",
+    "\\phi_{Z_n}(t) =\n",
+    "\\phi_{Y_1}\\left(\\frac{t}{\\sqrt{n}}\\right)\\cdot\\phi_{Y_2}\\left(\\frac{t}{\\sqrt{n}}\\right)\\cdots\\phi_{Y_n}\\left(\\frac{t}{\\sqrt{n}}\\right) =\n",
+    "\\left[\\phi_{Y_1}\\left(\\frac{t}{\\sqrt{n}}\\right)\\right]^n\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    "Take the Taylor expansion,\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\phi_{Y_1}\\left(\\frac{t}{\\sqrt{n}}\\right) &= \\phi_{Y_1}(0) + \\phi_{Y_1}'(0)\\frac{t}{\\sqrt{n}} + \\phi_{Y_1}''(0)\\frac{t^2}{2n} + \\phi_{Y_1}^{(3)}(0)\\frac{t^2}{6n^{\\frac{3}{2}}} + \\cdots \\\\\n",
+    "&= 1-\\frac{t^2}{2n}+c\\frac{t^3}{6n^{\\frac{3}{2}}} + o\\left(\\frac{t^3}{n^{\\frac{3}{2}}}\\right) \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "where $c$ is some complex constant. To show this, let's take it term-by-term. First, note that\n",
+    "\n",
+    "$$\\phi_{Y_1}\\left(\\frac{t}{\\sqrt{n}}\\right)=\\int e^{i\\frac{t}{\\sqrt{n}}y} f_{Y_1}(y)dy$$\n",
+    "\n",
+    "Now,\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\phi_{Y_1}(0)&=\\int e^0 f_{Y_1}(y)dy = \\int f_{Y_1}(y)dy = 1 \\\\\n",
+    "\\phi_{Y_1}'(0)&=\\int iye^{0} f_{Y_1}(y)dy \\\\\n",
+    "&= i\\int yf_{Y_1}(y)dy \\\\\n",
+    "&= iE[Y_1] \\\\\n",
+    "&= 0 \\\\\n",
+    "\\phi_{Y_1}''(0) &= \\int -y^2 f_{Y_1}(y)dy \\\\\n",
+    "&= -E[Y_1^2] \\\\\n",
+    "&= -1 \\\\\n",
+    "\\phi_{Y_1}^{(3)}(0) &= \\int -iy^3 f_{Y_1}(y)dy \\\\\n",
+    "&= -iE[Y_1^3] \\\\\n",
+    "&= c\n",
+    "\\end{align}\n",
+    "\n",
+    "Now we can consider the limit as $n\\rightarrow\\infty$\n",
+    "\n",
+    "$$\\lim_{n\\rightarrow\\infty}\\phi_{Z_n}(t)=\\lim_{n\\rightarrow\\infty}\\left(1-\\frac{t^2}{2n}+c\\frac{t^3}{6n^{\\frac{3}{2}}} + o\\left(\\frac{t^3}{n^{\\frac{3}{2}}}\\right)\\right)^n=e^{-\\frac{1}{2}t^2}$$\n",
+    "\n",
+    "because terms proportional to $\\frac{1}{n^{\\frac{3}{2}}}$ and below vanish much more quickly than the $\\frac{1}{n}$ term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
