move drift diffusion notebook to subthreshold series

--- a/subthreshold/Drift and Diffusion.ipynb
+++ b/subthreshold/Drift and Diffusion.ipynb
@@ -54,7 +54,47 @@
     }
    },
    "source": [
-    "# Diffusion"
+    "# Diffusion\n",
+    "\n",
+    "In the previous [Drift](#Drift) section, we found the average, overall velocity, $v_{drift}$, of a collection of randomly moving particles subject to an external force. We surmized along the way, that there would be no net displacement of an individual particle due to the random velocities induced by collisions. \n",
+    "\n",
+    "In this section, we will see that although individual particles do not experience net displacement due to the random motions, the collection of particles may exhibit an overall velocity $v_{drift}$ due a concentration gradient. This corroborates our intuititve experience of watching tea from a teabag diffuse into surrounding water (although more is actually at play there).\n",
+    "\n",
+    "In a concentration gradient, the number of particles per unit space varies over space. We'll reduce our analysis to the single dimension along the gradient and express the gradient as \n",
+    "\n",
+    "$$\\frac{dN}{dh}$$ \n",
+    "\n",
+    "where $N$ is the number of particles and $h$ is the distance along the gradient. We'll further simplify our analysis by chopping up space into compartments small enough that a particle, on average, could move 1 compartment per unit of mean free time. Let's define the mean magnitude of the velocity due to random motions as $v_T$ so that the compartment width will be given by $\\Delta h=v_Tt_f$.\n",
+    "\n",
+    "Now, because of the concentration gradient, neighboring compartments will have slightly different numbers of particles.\n",
+    "\n",
+    "With each unit of $t_f$, half of the particles in each compartment will move left and half will move right. We can see that, because of the concentration gradient, there will be a net movement of\n",
+    "\n",
+    "$$\\frac{\\Delta N}{2}$$\n",
+    "\n",
+    "particles from a compartment of higher concentration to a compartment of lower concentration. Now, by the definition of a derivative,\n",
+    "\n",
+    "$$\\frac{\\Delta N}{\\Delta h}=\\frac{dN}{dh}$$\n",
+    "\n",
+    "Rearranging and substituting for $\\Delta h$,\n",
+    "\n",
+    "$$\\Delta N\\approx\\frac{dN}{dh}v_Tt_f$$\n",
+    "\n",
+    "What is the resulting motion\n",
+    "We know that each particle moves\n",
+    "Let's consider a compartmentalized model of our particles.\n",
+    "\n",
+    "$$v_{diff}=\\frac{1}{2N}\\frac{dN}{dh}t_fv_T^2$$\n",
+    "\n",
+    "The random velocity $v_T$ of particles colliding gives rise to our experience of temperature, hence $v_T$ is known as the thermal velocity. Temperature is related to kinetic energy (and hence thermal velocity) by\n",
+    "\n",
+    "$$\\frac{1}{2}mv_T^2=\\frac{1}{2}kT$$\n",
+    "\n",
+    "where $k$ is Boltzmann's constant, $m$ is a particle's mass. Substituting for $v_T$ in the $v_{diff}$ equation,\n",
+    "\n",
+    "$$v_{diff} = \\frac{-1}{2}\\frac{1}{N}\\frac{dN}{dh}kT\\frac{t_f}{m}$$\n",
+    "\n",
+    "\n"
    ]
   },
   {
